# fuzzy_sidc

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
fuzzy_sidc/: __init__.py  __main__.py
json/: set_b.json
notebooks/: 001-kba-data_structure_from_man.ipynb  002-kba-data_from_Mans_Beckman.ipynb  003-kba-JS_in_Python.ipynb  003-kba-fuzzysearch_experiments.ipynb  004-kba-JS_in_Python.ipynb  005-kba-data_structure_from_man.ipynb  005-kba-single_piece_of_code.ipynb  007-kba-fuzzysearch_experiments.ipynb  008-kba-single_piece_of_code.ipynb
