[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ['fuzzy_sidc']

[tool.hatch.build.targets.wheel]
packages = ['fuzzy_sidc']

[project]
requires-python = ">= 3.10"
name='fuzzy_sidc'
version='0.1.0'
description="fyzzy search for SIDC"
dependencies=['rapidfuzz', 'mini-racer']
